# trend-pulse

./: .gitignore  CHANGELOG.md  Dockerfile  Dockerfile.dashboard  README.md  docker-compose.yml  pyproject.toml
.github/: copilot-instructions.md
.github/ISSUE_TEMPLATE/: config.yml
.github/workflows/: ci.yml  codeql.yml  publish.yml
docs/: custom-sources.md
examples/: custom_rss_source.py
src/trend_pulse/: __init__.py  aggregator.py  cli.py  history.py  server.py  velocity.py
src/trend_pulse/content/: __init__.py  adapter.py  briefing.py  generator.py  reviewer.py
src/trend_pulse/core/: __init__.py
src/trend_pulse/core/agents/: __init__.py  workflow.py
src/trend_pulse/core/intelligence/: __init__.py  clusters.py  lifecycle.py
src/trend_pulse/core/scoring/: __init__.py  hybrid.py
src/trend_pulse/core/vector/: __init__.py  base.py  simple.py
src/trend_pulse/dashboard/: __init__.py  api.py  app.py
src/trend_pulse/dashboard/pages/: campaign.py  clusters.py  history.py  realtime.py
src/trend_pulse/notifications/: __init__.py  base.py  channels.py
src/trend_pulse/patents/: __init__.py  database.py  scorer.py  templates.py
src/trend_pulse/plugins/: __init__.py  base.py  registry.py
src/trend_pulse/plugins/sources/: __init__.py  bahamut.py  coinmarketcap.py  dexscreener.py  ettoday.py  indie_hackers.py  line_today.py  linkedin_trending.py  mobile01.py  pinterest.py  threads.py  tiktok_trending.py  udn.py  weibo.py  x_trending.py  xiaohongshu.py  yahoo_tw.py  youtube_trending.py
src/trend_pulse/sources/: __init__.py  arxiv.py  base.py  bluesky.py  browser_renderer.py  coingecko.py  dcard.py  devto.py  dockerhub.py  github_trending.py  google_news.py  google_trends.py  hackernews.py  lemmy.py  lobsters.py  mastodon.py  npm.py  producthunt.py  ptt.py  pypi.py  reddit.py  stackoverflow.py  wikipedia.py
tests/: test_browser_renderer.py  test_content.py  test_core_intelligence.py  test_gap_fill.py  test_patents.py  test_phase2_3.py  test_plugins.py  test_server.py  test_sources.py
