[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "trend-pulse"
version = "0.3.0"
description = "Free trending topics aggregator with content generation + patent-based review. MCP Server + CLI + Python library."
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [{ name = "Claude World", email = "hello@claude-world.com" }]
keywords = ["trends", "trending", "mcp", "google-trends", "hacker-news", "bluesky", "mastodon", "wikipedia", "github-trending", "pypi"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
]
dependencies = [
    "httpx>=0.27",
    "aiosqlite>=0.20",
]

[project.urls]
Homepage = "https://github.com/claude-world/trend-pulse"
Repository = "https://github.com/claude-world/trend-pulse"
Issues = "https://github.com/claude-world/trend-pulse/issues"

[project.optional-dependencies]
mcp = ["mcp[cli]>=1.0"]
google = ["trendspyg", "pytrends>=4.9"]
content = []  # Pure Python + httpx (already in core deps)
all = ["mcp[cli]>=1.0", "trendspyg", "pytrends>=4.9"]

[project.scripts]
trend-pulse = "trend_pulse.cli:main"
trend-pulse-server = "trend_pulse.server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/trend_pulse"]
