[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "trend-pulse"
version = "0.5.3"
description = "Free trending topics aggregator and AI content guides with 20 sources, zero auth, patent-based scoring, plus a CLI, MCP server, and Python library."
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [{ name = "Claude World", email = "hello@claude-world.com" }]
keywords = ["trends", "trending", "mcp", "google-trends", "hacker-news", "bluesky", "mastodon", "wikipedia", "github-trending", "pypi", "dcard", "ptt"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "httpx>=0.27",
    "aiosqlite>=0.20",
]

[project.urls]
Homepage = "https://github.com/claude-world/trend-pulse"
Repository = "https://github.com/claude-world/trend-pulse"
"Bug Tracker" = "https://github.com/claude-world/trend-pulse/issues"

[project.optional-dependencies]
mcp = ["mcp[cli]>=1.0"]
google = ["trendspyg", "pytrends>=4.9"]
content = []  # Pure Python + httpx (already in core deps)
browser = []  # CF Browser Rendering — uses httpx (already in core). Needs CF_ACCOUNT_ID + CF_API_TOKEN env vars.
all = ["mcp[cli]>=1.0", "trendspyg", "pytrends>=4.9"]

[project.scripts]
trend-pulse = "trend_pulse.cli:main"
trend-pulse-server = "trend_pulse.server:main"

[dependency-groups]
dev = ["pytest>=8.0", "ruff>=0.4"]

[tool.hatch.build.targets.wheel]
packages = ["src/trend_pulse"]
