[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "trend-pulse"
version = "2.0.0"
description = "Global open-source Agentic Trend Intelligence Platform — 35+ sources, plugin system, vector search, trend clustering, lifecycle prediction, 6-agent content factory, web dashboard, and 23-tool MCP server."
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [{ name = "Claude World", email = "hello@claude-world.com" }]
keywords = ["trends", "trending", "mcp", "google-trends", "hacker-news", "bluesky", "mastodon", "wikipedia", "github-trending", "pypi", "dcard", "ptt"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "httpx>=0.27",
    "aiosqlite>=0.20",
]

[project.urls]
Homepage = "https://github.com/claude-world/trend-pulse"
Repository = "https://github.com/claude-world/trend-pulse"
"Bug Tracker" = "https://github.com/claude-world/trend-pulse/issues"

[project.optional-dependencies]
mcp = ["mcp[cli]>=1.0"]
google = ["trendspyg", "pytrends>=4.9"]
content = []  # Pure Python + httpx (already in core deps)
browser = ["playwright>=1.40"]  # TikTok, Instagram JS-heavy pages. Run: playwright install chromium
social = ["twikit>=1.0"]  # X/Twitter trending (guest token, no login required)
zh = ["beautifulsoup4>=4.12"]   # Enhanced Chinese HTML parsing
dashboard = ["streamlit>=1.30", "plotly>=5.0", "fastapi>=0.100", "uvicorn>=0.24", "pandas>=2.0"]  # Web dashboard + REST API
llm = ["anthropic>=0.35"]  # L2 LLM judge for Hybrid Scoring 2.0
all = ["mcp[cli]>=1.0", "trendspyg", "pytrends>=4.9", "twikit>=1.0", "playwright>=1.40", "beautifulsoup4>=4.12", "streamlit>=1.30", "plotly>=5.0", "fastapi>=0.100", "uvicorn>=0.24", "pandas>=2.0", "anthropic>=0.35"]

[project.scripts]
trend-pulse = "trend_pulse.cli:main"
trend-pulse-server = "trend_pulse.server:main"

[dependency-groups]
dev = ["pytest>=8.0", "ruff>=0.4"]

[tool.hatch.build.targets.wheel]
packages = ["src/trend_pulse"]
